Fixing overflow bug on vehicle mobile  navigation

--- a/CSS/Vehicles.css
+++ b/CSS/Vehicles.css
@@ -87,6 +87,7 @@ body{
     .vehicle{
         height: 80%;
         display: flex;
+        align-items: stretch;
         margin-right: 5%;
     }
 
